[gd_scene load_steps=2 format=3 uid="uid://bwhjh7wlhpe5"]

[ext_resource type="Script" uid="uid://dlviff8e0wng8" path="res://algorithms/wavefunctions/mariocontrol/simple_mario_slider.gd" id="1"]

[node name="SimpleMarioSlider" type="Control" groups=["mario_slider_control"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.2, 0.9)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
text = "Mario Sound Control"
horizontal_alignment = 1

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Freq1Container" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Freq1Label" type="Label" parent="VBox/Freq1Container"]
layout_mode = 2
size_flags_horizontal = 3
text = "Frequency 1: 880 Hz"

[node name="Freq1Slider" type="HSlider" parent="VBox/Freq1Container"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 200.0
max_value = 2000.0
step = 10.0
value = 880.0

[node name="Freq2Container" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Freq2Label" type="Label" parent="VBox/Freq2Container"]
layout_mode = 2
size_flags_horizontal = 3
text = "Frequency 2: 1318 Hz"

[node name="Freq2Slider" type="HSlider" parent="VBox/Freq2Container"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 400.0
max_value = 3000.0
step = 10.0
value = 1320.0

[node name="VolumeContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="VolumeLabel" type="Label" parent="VBox/VolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Volume: 0.50"

[node name="VolumeSlider" type="HSlider" parent="VBox/VolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.5

[node name="LengthContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="LengthLabel" type="Label" parent="VBox/LengthContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Length: 0.20s"

[node name="LengthSlider" type="HSlider" parent="VBox/LengthContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 0.5
step = 0.01
value = 0.2

[node name="TestButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Test Sound"

[node name="WaveformDisplay" type="Control" parent="VBox"]
custom_minimum_size = Vector2(400, 150)
layout_mode = 2
